# tfx

./: .bazelrc  .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.ml-pipelines-sdk.md  RELEASE.md  RFCs.md  ROADMAP.md  WORKSPACE  _book.yaml  bazel-bin  bazel-out  bazel-testlogs  bazel-tfx  conftest.py  index.html  mkdocs.yml  nightly_test_constraints.txt  objects.inv  package_config.py  pylintrc  pyproject.toml  pytest.ini  requirements-docs.txt  requirements.txt  setup.cfg  setup.py  test_constraints.txt
.github/ISSUE_TEMPLATE/: 00-bug-issue.md  10-feature-issue.md  20-docs-issue.md  bug_issue.md  config.yml  docs_issue.md  feature_issue.md
.github/workflows/: cd-docs.yml  ci-lint.yml  ci-test.yml  csat-disable.yml  csat.yml  docker.yml  stale.yml  unit-tests.yml  wheel-in-release.yml  wheels.yml
addons/: _index.yaml
api/v1/: index.html
api_overview/: index.html
docs/: RELEASE.md  _book.yaml  _index.yaml  _project.yaml  api_overview.md  index.md
docs/addons/: _index.yaml
docs/api/: components.md  root.md  testing.md
docs/api_docs/: index.md
docs/guide/: _toc.yaml  addons.md  airflow.md  all_diagrams.ai  beam.md  beam_orchestrator.md  build_local_pipeline.md  build_tfx_pipeline.md  bulkinferrer.md  cli.md  container_component.md  custom_component.md  custom_function_component.md  custom_orchestrator.md  evaluator.md  examplegen.md  exampleval.md  fairness_indicators.md  gcp.md  importernode.md  index.md  infra_validator.md  keras.md  kubeflow.md  local_orchestrator.md  mlmd.md  modelval.md  non_tf.md  orchestra.md  pusher.md  resolvernode.md  schemagen.md  serving.md  solutions.md  statsgen.md  tfdv.md  tfma.md  tfs.md  tft.md  tft_bestpractices.md  (+7 more)
docs/public/: windowing.md
docs/solutions/: index.md
docs/stylesheets/: extra.css
docs/tutorials/: _index.yaml  _toc.yaml  index.md
examples/chicago_taxi/: README.md  chicago_taxi_client.py  chicago_taxi_tfma.ipynb  chicago_taxi_tfma_local_playground.ipynb  classify_locally_flink.sh  classify_mlengine.sh  execute_on_flink.sh  preprocess.py  preprocess_dataflow.sh  preprocess_flink.sh  preprocess_local.sh  process_tfma.py  process_tfma_dataflow.sh  process_tfma_flink.sh  process_tfma_local.sh  process_worker.sh  setup.py  setup_beam.sh  setup_beam_on_flink.sh  start_model_server_local.sh  start_model_server_locallly_flink.sh  start_model_server_mlengine.sh  tfdv_analyze_and_validate.py  tfdv_analyze_and_validate_dataflow.sh  tfdv_analyze_and_validate_flink.sh  tfdv_analyze_and_validate_local.sh  train_locally_flink.sh  train_mlengine.sh
examples/chicago_taxi_pipeline/: README.md  taxi_pipeline_gcp.py  taxi_pipeline_gcp_test.py  taxi_pipeline_kubeflow.py  taxi_pipeline_kubeflow_large.py  taxi_pipeline_kubeflow_large_test.py  taxi_pipeline_kubeflow_test.py  taxi_pipeline_simple.py  taxi_pipeline_simple_test.py  taxi_utils.py  taxi_utils_test.py
guide/: _toc.yaml  index.html
guide/addons/: index.html
guide/airflow/: index.html
guide/beam/: index.html
guide/build_local_pipeline/: index.html
guide/build_tfx_pipeline/: index.html
guide/bulkinferrer/: index.html
guide/cli/: index.html
guide/container_component/: index.html
guide/custom_component/: index.html
guide/custom_function_component/: index.html
guide/custom_orchestrator/: index.html
guide/evaluator/: index.html
guide/examplegen/: index.html
guide/exampleval/: index.html
guide/fairness_indicators/: index.html
guide/infra_validator/: index.html
guide/keras/: index.html
guide/kubeflow/: index.html
guide/local_orchestrator/: index.html
guide/mlmd/: index.html
guide/modelval/: index.html
guide/non_tf/: index.html
guide/pusher/: index.html
guide/schemagen/: index.html
guide/serving/: index.html
guide/solutions/: index.html
guide/statsgen/: index.html
guide/tfdv/: index.html
guide/tfma/: index.html
guide/tft/: index.html
guide/tft_bestpractices/: index.html
guide/train/: index.html
guide/trainer/: index.html
guide/transform/: index.html
guide/tuner/: index.html
guide/understanding_custom_components/: index.html
guide/understanding_tfx_pipelines/: index.html
guide/vertex/: index.html
package_build/: README.md  initialize.sh
package_build/ml-pipelines-sdk/: README.md  README.ml-pipelines-sdk.md  package_config.py  pyproject.toml
package_build/tfx/: package_config.py  pyproject.toml
patches/: BUILD  README.md  com_github_grpc_grpc_compat.patch  com_google_protobuf_compat.patch  tensorflow_metadata_proto_v0.patch  tfx.patch
search/: search_index.json
stylesheets/: extra.css
tfx/: BUILD  CONTRIBUTING.md  MANIFEST.in  RFCs.md  ROADMAP.md  __init__.py  build_docker_image.sh  build_pip_package.sh  concepts.md  conftest.py  dependencies.py  keras_lib.py  py.typed  repo.bzl  tfx.bzl  version.py  workspace.bzl
tfx/benchmarks/: beam_flink_cluster.yaml  beam_job_server.yaml  beam_pipeline_benchmark_base.py  beam_pipeline_benchmark_chicago_taxi.py  benchmark_base.py  benchmark_dataset.py  benchmark_utils.py  big_shuffle_benchmark.py  constants.py  flink_on_k8s_cluster.yaml  flink_on_k8s_job_server.yaml  mode_config.py  regenerate_datasets.py  setup.py  tfma_benchmark_base.py  tfma_benchmark_chicago_taxi.py  tfma_v2_benchmark_base.py  tft_benchmark.py  (+3 more)
tutorials/: index.html
(+2370 files in other folders)
