[metadata]
name = tfx
version = attr: tfx.version.__version__
author = Google LLC
author_email = tensorflow-extended-dev@googlegroups.com
license = Apache 2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
description = TensorFlow Extended (TFX) is a TensorFlow-based general-purpose machine learning platform implemented at Google
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords = tensorflow tfx
url = https://www.tensorflow.org/tfx
download_url = https://github.com/tensorflow/tfx/tags

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose -m "not end_to_end"
python_files = *_test.py
norecursedirs = custom_components .* *.egg
markers =
    end_to_end: end to end tests which are slow and requires more dependency (deselect with '-m "not end_to_end"')
    serial
